tests/NormalTests/paczka1/small_fuzzy/62132361.err
Error in line 1: 5Ia S179 7,7
Error in line 3: 5Ia A37 68,9
Error in line 4: vcqW13 A983 90,3
Error in line 7: S179 A37 16,7
Error in line 14: S179 A814 39,9
